--- a/style.css
+++ b/style.css
@@ -60,3 +60,30 @@ footer {
     margin-top: 40px;
     color: #555;
 }
+
+/* Estilo para a galeria de imagens */
+.galeria-imagens {
+    display: flex;
+    justify-content: space-around;
+}
+
+.galeria-imagens img {
+    width: 30%;
+    margin: 10px;
+    border-radius: 5px;
+}
+
+/* Estilo para as curiosidades */
+#curiosidadeDetails {
+    margin-top: 20px;
+    background-color: #f1f1f1;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+#curiosidadeImagem {
+    margin-top: 10px;
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+}
